--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'http://the.ghost.of.spring-pa.st/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'cole'
