--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,42 @@
 baseURL = 'https://the.ghost.of.spring-pa.st/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'The ghost of spring past'
 theme = 'cole'
+autoCover = true
+
+defaultContentLanguage = 'en'
+[languages]
+  [languages.ar]
+    languagedirection = 'rtl'
+    title = 'شبح الربيع اللي فات'
+    weight = 2
+  [languages.en]
+    title = 'The ghost of spring past'
+    weight = 1
+#    [languages.en.params]
+#      linkedin = 'https://linkedin.com/whoever'
+  [languages.de]
+    title = 'Der Geist des vergangenen Frühlings'
+    weight = 2
+#    [languages.fr.params]
+#      linkedin = 'https://linkedin.com/fr/whoever'
+#      [languages.fr.params.navigation]
+#        help = 'Aide'
+
+
+[[menu.main]]
+  identifier = 'the #FreeAlaa website'
+  name = 'the #FreeAlaa webiste'
+  pre = "<i class='fa fa-heart'></i>"
+  url = 'https://freealaa.net/'
+  weight = -110
+[[menu.main]]
+  identifier = 'Egypt Prison Atlas'
+  name = 'Egypt Prison Atlas'
+  pre = "<i class='fa fa-heart'></i>"
+  url = 'https://egyptprisonatlas.org/'
+  weight = -110
+
 [params]
     footer = '<span style="font-size:12px;">You have created a new or derived work? Dispatched it to your own platform already? whether you want to express solidarity with those wronged, or use your art and politcs as a public statment, an artistic form of petition; you can pass it on to others to translate, Print, Modify, and Put it up!</br>OR</br>You have created a new or derived work? and you want to stay anonymous? whether you are afraid, or you see this as inline with your politics and world views. upload it somewhere, such as <a href="https://hostb.org">https://hostb.org</a></br>Send us the links or files to <a href="mailto:spring-pa.st@proton.me">spring-pa.st@proton.me</a><br/>got changes webpage? then <a href="https://github.com/spring-past/webpage">github.com/spring-past</a></span>'
+    Logo.logoText = 'The ghost of spring past'
